deployment/database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-deployment
  labels:
    app: database
spec:
  selector:
    matchLabels:
      app: database
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: database
        tier: mysql
    spec:
      containers:
        - image: mysql:8.0
          name: mysql
          livenessProbe:
            tcpSocket:
              port: 3306
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pvc
