deployment/rateme-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      name: backend
      labels:
        app: backend
    spec:
      containers:
        - name: rateme-nextgen-backend
          image: ghcr.io/goldjns/rateme-nextgen-backend:v1.4.2
          ports:
            - containerPort: 8080
      restartPolicy: Always
