deployment/rateme-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      name: database
      labels:
        app: database
    spec:
      containers:
        - name: rateme-nextgen-database
          image: ghcr.io/goldjns/rateme-nextgen-database:v1.4.2
          ports:
            - containerPort: 5432
      restartPolicy: Always
