deployment/rateme-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      name: ui
      labels:
        app: ui
    spec:
      containers:
        - name: rateme-nextgen-ui
          image: ghcr.io/goldjns/rateme-nextgen-ui:v1.4.2
          ports:
            - containerPort: 80
      restartPolicy: Always
