deployment/ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      name: ui
      labels:
        app: ui
    spec:
      containers:
        - name: rateme-nextgen-ui
          image: ghcr.io/goldjns/rateme-nextgen-ui:1.4.2-beta
          ports:
            - containerPort: 80
          volumeMounts:
            - name: cfg
              mountPath: /usr/share/nginx/html/apiConfig.js
              subPath: apiConfig.js
              readOnly: true
      restartPolicy: Always
      volumes:
        - name: cfg
          configMap:
            name: ui-config-map
