deployment/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend-container
          image: ghcr.io/goldjns/rateme-nextgen-backend:backend-0.1.0-beta
          ports:
            - name: http
              containerPort: 8080
          env: # Environment variables supplied to the Pod
            - name: SPRING_DATASOURCE_USERNAME # Name of the environment variable
              valueFrom:
                configMapKeyRef:
                  name: mysql-config-map
                  key: mysql-user-username
            - name: SPRING_DATASOURCE_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: mysql-pass
                  key: mysql-user-password
            - name: SPRING_DATASOURCE_URL
              valueFrom:
                configMapKeyRef:
                  name: mysql-config-map
                  key: mysql-db-url
            - name: MYSQL_HOST
              value: backend-service
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    app: backend
spec:
  type: NodePort
  selector:
    app: backend
  ports:
    - protocol: TCP
      name: http
      port: 8080
      targetPort: 8080
      nodePort: 30012
